openshift-keycloak.yaml
apiVersion: v1
kind: Template
metadata:
  creationTimestamp: null
  name: keycloak
objects:
- apiVersion: v1
  kind: ImageStream
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
      openshift.io/image.dockerRepositoryCheck: 2016-05-26T20:15:36Z
    creationTimestamp: null
    generation: 2
    labels:
      app: keycloak-style
    name: keycloak-style
  spec:
    tags:
    - annotations:
        openshift.io/imported-from: leokraken/keycloak-style
      from:
        kind: DockerImage
        name: 172.30.112.210:5000/test/keycloak-style:latest
      generation: 2
      importPolicy: {}
      name: latest
  status:
    dockerImageRepository: ""
- apiVersion: v1
  kind: DeploymentConfig
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: null
    labels:
      app: keycloak-style
    name: keycloak-style
  spec:
    replicas: 1
    selector:
      app: keycloak-style
      deploymentconfig: keycloak-style
    strategy:
      resources: {}
      rollingParams:
        intervalSeconds: 1
        maxSurge: 25%
        maxUnavailable: 25%
        timeoutSeconds: 600
        updatePeriodSeconds: 1
      type: Rolling
    template:
      metadata:
        annotations:
          openshift.io/container.keycloak-style.image.entrypoint: '["/opt/jboss/docker-entrypoint.sh","-b","0.0.0.0"]'
          openshift.io/generated-by: OpenShiftNewApp
        creationTimestamp: null
        labels:
          app: keycloak-style
          deploymentconfig: keycloak-style
      spec:
        containers:
        - image: leokraken/keycloak-style@sha256:53ff44fa5e31e7a7ada2f60e952b9261751b1b297b9b144e80dc90f529fe270a
          imagePullPolicy: Always
          name: keycloak-style
          ports:
          - containerPort: 8080
            protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        securityContext: {}
        terminationGracePeriodSeconds: 30
    test: false
    triggers:
    - type: ConfigChange
    - imageChangeParams:
        automatic: true
        containerNames:
        - keycloak-style
        from:
          kind: ImageStreamTag
          name: keycloak-style:latest
      type: ImageChange
  status: {}
- apiVersion: v1
  kind: DeploymentConfig
  metadata:
    creationTimestamp: null
    labels:
      template: mongodb-ephemeral-template
    name: mongo
  spec:
    replicas: 1
    selector:
      name: mongo
    strategy:
      recreateParams:
        timeoutSeconds: 600
      resources: {}
      type: Recreate
    template:
      metadata:
        creationTimestamp: null
        labels:
          name: mongo
      spec:
        containers:
        - env:
          - name: MONGODB_USER
            value: keycloak
          - name: MONGODB_PASSWORD
            value: keycloak
          - name: MONGODB_DATABASE
            value: keycloak
          - name: MONGODB_ADMIN_PASSWORD
            value: mongodb
          image: centos/mongodb-26-centos7@sha256:eab8b773b1a64618751128803ef9042f2218fd7f5c5109f5e39d2089a83a0bd3
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 3
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: 27017
            timeoutSeconds: 1
          name: mongodb
          ports:
          - containerPort: 27017
            protocol: TCP
          readinessProbe:
            exec:
              command:
              - /bin/sh
              - -i
              - -c
              - mongostat --host 127.0.0.1 -u admin -p $MONGODB_ADMIN_PASSWORD -n
                1 --noheaders
            failureThreshold: 3
            initialDelaySeconds: 3
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              memory: 512Mi
          securityContext:
            capabilities: {}
            privileged: false
          terminationMessagePath: /dev/termination-log
          volumeMounts:
          - mountPath: /var/lib/mongodb/data
            name: mongo-data
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        securityContext: {}
        terminationGracePeriodSeconds: 30
        volumes:
        - emptyDir: {}
          name: mongo-data
    test: false
    triggers:
    - imageChangeParams:
        containerNames:
        - mongodb
        from:
          kind: ImageStreamTag
          name: mongodb:latest
          namespace: openshift
      type: ImageChange
    - type: ConfigChange
  status: {}
- apiVersion: v1
  kind: ReplicationController
  metadata:
    annotations:
      openshift.io/deployer-pod.name: keycloak-style-1-deploy
      openshift.io/deployment-config.latest-version: "1"
      openshift.io/deployment-config.name: keycloak-style
      openshift.io/deployment.phase: Complete
      openshift.io/deployment.replicas: "1"
      openshift.io/encoded-deployment-config: |
        {"kind":"DeploymentConfig","apiVersion":"v1","metadata":{"name":"keycloak-style","namespace":"test","selfLink":"/oapi/v1/namespaces/test/deploymentconfigs/keycloak-style","uid":"9a469914-237e-11e6-aa04-525400659b2e","resourceVersion":"85476","creationTimestamp":"2016-05-26T20:15:34Z","labels":{"app":"keycloak-style"},"annotations":{"openshift.io/generated-by":"OpenShiftNewApp"}},"spec":{"strategy":{"type":"Rolling","rollingParams":{"updatePeriodSeconds":1,"intervalSeconds":1,"timeoutSeco [...]
    creationTimestamp: null
    generation: 1
    labels:
      app: keycloak-style
      openshift.io/deployment-config.name: keycloak-style
    name: keycloak-style-1
  spec:
    replicas: 1
    selector:
      app: keycloak-style
      deployment: keycloak-style-1
      deploymentconfig: keycloak-style
    template:
      metadata:
        annotations:
          openshift.io/container.keycloak-style.image.entrypoint: '["/opt/jboss/docker-entrypoint.sh","-b","0.0.0.0"]'
          openshift.io/deployment-config.latest-version: "1"
          openshift.io/deployment-config.name: keycloak-style
          openshift.io/deployment.name: keycloak-style-1
          openshift.io/generated-by: OpenShiftNewApp
        creationTimestamp: null
        labels:
          app: keycloak-style
          deployment: keycloak-style-1
          deploymentconfig: keycloak-style
      spec:
        containers:
        - image: leokraken/keycloak-style@sha256:53ff44fa5e31e7a7ada2f60e952b9261751b1b297b9b144e80dc90f529fe270a
          imagePullPolicy: Always
          name: keycloak-style
          ports:
          - containerPort: 8080
            protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        securityContext: {}
        terminationGracePeriodSeconds: 30
  status:
    replicas: 0
- apiVersion: v1
  kind: ReplicationController
  metadata:
    annotations:
      openshift.io/deployer-pod.name: mongo-1-deploy
      openshift.io/deployment-config.latest-version: "1"
      openshift.io/deployment-config.name: mongo
      openshift.io/deployment.phase: Complete
      openshift.io/deployment.replicas: "1"
      openshift.io/encoded-deployment-config: |
        {"kind":"DeploymentConfig","apiVersion":"v1","metadata":{"name":"mongo","namespace":"test","selfLink":"/oapi/v1/namespaces/test/deploymentconfigs/mongo","uid":"56f03f9f-237e-11e6-aa04-525400659b2e","resourceVersion":"85362","creationTimestamp":"2016-05-26T20:13:41Z","labels":{"template":"mongodb-ephemeral-template"}},"spec":{"strategy":{"type":"Recreate","recreateParams":{"timeoutSeconds":600},"resources":{}},"triggers":[{"type":"ImageChange","imageChangeParams":{"containerNames":["mongo [...]
    creationTimestamp: null
    generation: 1
    labels:
      openshift.io/deployment-config.name: mongo
      template: mongodb-ephemeral-template
    name: mongo-1
  spec:
    replicas: 1
    selector:
      deployment: mongo-1
      deploymentconfig: mongo
      name: mongo
    template:
      metadata:
        annotations:
          openshift.io/deployment-config.latest-version: "1"
          openshift.io/deployment-config.name: mongo
          openshift.io/deployment.name: mongo-1
        creationTimestamp: null
        labels:
          deployment: mongo-1
          deploymentconfig: mongo
          name: mongo
      spec:
        containers:
        - env:
          - name: MONGODB_USER
            value: keycloak
          - name: MONGODB_PASSWORD
            value: keycloak
          - name: MONGODB_DATABASE
            value: keycloak
          - name: MONGODB_ADMIN_PASSWORD
            value: mongodb
          image: centos/mongodb-26-centos7@sha256:eab8b773b1a64618751128803ef9042f2218fd7f5c5109f5e39d2089a83a0bd3
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 3
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: 27017
            timeoutSeconds: 1
          name: mongodb
          ports:
          - containerPort: 27017
            protocol: TCP
          readinessProbe:
            exec:
              command:
              - /bin/sh
              - -i
              - -c
              - mongostat --host 127.0.0.1 -u admin -p $MONGODB_ADMIN_PASSWORD -n
                1 --noheaders
            failureThreshold: 3
            initialDelaySeconds: 3
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              memory: 512Mi
          securityContext:
            capabilities: {}
            privileged: false
          terminationMessagePath: /dev/termination-log
          volumeMounts:
          - mountPath: /var/lib/mongodb/data
            name: mongo-data
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        securityContext: {}
        terminationGracePeriodSeconds: 30
        volumes:
        - emptyDir: {}
          name: mongo-data
  status:
    replicas: 0
- apiVersion: v1
  kind: Route
  metadata:
    annotations:
      openshift.io/host.generated: "true"
    creationTimestamp: null
    labels:
      app: keycloak-style
    name: keycloak-style
  spec:
    host: keycloak-style-test.apps.10.2.2.2.xip.io
    port:
      targetPort: 8080-tcp
    to:
      kind: Service
      name: keycloak-style
  status:
    ingress:
    - conditions:
      - lastTransitionTime: 2016-05-26T20:19:48Z
        status: "True"
        type: Admitted
      host: keycloak-style-test.apps.10.2.2.2.xip.io
      routerName: router
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: null
    labels:
      app: keycloak-style
    name: keycloak-style
  spec:
    ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
    selector:
      app: keycloak-style
      deploymentconfig: keycloak-style
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    creationTimestamp: null
    labels:
      template: mongodb-ephemeral-template
    name: mongo
  spec:
    ports:
    - name: mongo
      port: 27017
      protocol: TCP
      targetPort: 27017
    selector:
      name: mongo
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Pod
  metadata:
    annotations:
      kubernetes.io/created-by: |
        {"kind":"SerializedReference","apiVersion":"v1","reference":{"kind":"ReplicationController","namespace":"test","name":"keycloak-style-1","uid":"9bb50656-237e-11e6-aa04-525400659b2e","apiVersion":"v1","resourceVersion":"85493"}}
      openshift.io/container.keycloak-style.image.entrypoint: '["/opt/jboss/docker-entrypoint.sh","-b","0.0.0.0"]'
      openshift.io/deployment-config.latest-version: "1"
      openshift.io/deployment-config.name: keycloak-style
      openshift.io/deployment.name: keycloak-style-1
      openshift.io/generated-by: OpenShiftNewApp
      openshift.io/scc: anyuid
    creationTimestamp: null
    generateName: keycloak-style-1-
    labels:
      app: keycloak-style
      deployment: keycloak-style-1
      deploymentconfig: keycloak-style
  spec:
    containers:
    - image: leokraken/keycloak-style@sha256:53ff44fa5e31e7a7ada2f60e952b9261751b1b297b9b144e80dc90f529fe270a
      imagePullPolicy: Always
      name: keycloak-style
      ports:
      - containerPort: 8080
        protocol: TCP
      resources: {}
      securityContext:
        capabilities:
          drop:
          - KILL
          - MKNOD
          - SYS_CHROOT
        privileged: false
        seLinuxOptions:
          level: s0:c11,c0
      terminationMessagePath: /dev/termination-log
      volumeMounts:
      - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
        name: default-token-vmp8k
        readOnly: true
    dnsPolicy: ClusterFirst
    host: origin
    imagePullSecrets:
    - name: default-dockercfg-pxwmp
    nodeName: origin
    restartPolicy: Always
    securityContext:
      seLinuxOptions:
        level: s0:c11,c0
    serviceAccount: default
    serviceAccountName: default
    terminationGracePeriodSeconds: 30
    volumes:
    - name: default-token-vmp8k
      secret:
        secretName: default-token-vmp8k
  status:
    phase: Pending
- apiVersion: v1
  kind: Pod
  metadata:
    annotations:
      kubernetes.io/created-by: |
        {"kind":"SerializedReference","apiVersion":"v1","reference":{"kind":"ReplicationController","namespace":"test","name":"mongo-1","uid":"57204592-237e-11e6-aa04-525400659b2e","apiVersion":"v1","resourceVersion":"85387"}}
      openshift.io/deployment-config.latest-version: "1"
      openshift.io/deployment-config.name: mongo
      openshift.io/deployment.name: mongo-1
      openshift.io/scc: anyuid
    creationTimestamp: null
    generateName: mongo-1-
    labels:
      deployment: mongo-1
      deploymentconfig: mongo
      name: mongo
  spec:
    containers:
    - env:
      - name: MONGODB_USER
        value: keycloak
      - name: MONGODB_PASSWORD
        value: keycloak
      - name: MONGODB_DATABASE
        value: keycloak
      - name: MONGODB_ADMIN_PASSWORD
        value: mongodb
      image: centos/mongodb-26-centos7@sha256:eab8b773b1a64618751128803ef9042f2218fd7f5c5109f5e39d2089a83a0bd3
      imagePullPolicy: IfNotPresent
      livenessProbe:
        failureThreshold: 3
        initialDelaySeconds: 30
        periodSeconds: 10
        successThreshold: 1
        tcpSocket:
          port: 27017
        timeoutSeconds: 1
      name: mongodb
      ports:
      - containerPort: 27017
        protocol: TCP
      readinessProbe:
        exec:
          command:
          - /bin/sh
          - -i
          - -c
          - mongostat --host 127.0.0.1 -u admin -p $MONGODB_ADMIN_PASSWORD -n 1 --noheaders
        failureThreshold: 3
        initialDelaySeconds: 3
        periodSeconds: 10
        successThreshold: 1
        timeoutSeconds: 1
      resources:
        limits:
          memory: 512Mi
        requests:
          memory: 512Mi
      securityContext:
        capabilities:
          drop:
          - KILL
          - MKNOD
          - SYS_CHROOT
        privileged: false
        seLinuxOptions:
          level: s0:c11,c0
      terminationMessagePath: /dev/termination-log
      volumeMounts:
      - mountPath: /var/lib/mongodb/data
        name: mongo-data
      - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
        name: default-token-vmp8k
        readOnly: true
    dnsPolicy: ClusterFirst
    host: origin
    imagePullSecrets:
    - name: default-dockercfg-pxwmp
    nodeName: origin
    restartPolicy: Always
    securityContext:
      seLinuxOptions:
        level: s0:c11,c0
    serviceAccount: default
    serviceAccountName: default
    terminationGracePeriodSeconds: 30
    volumes:
    - emptyDir: {}
      name: mongo-data
    - name: default-token-vmp8k
      secret:
        secretName: default-token-vmp8k
  status:
    phase: Pending
